@@ -4,6 +4,8 @@ Changelog
 1.0.1 - Unreleased
 ------------------
 
+* SVN externals no longer cause a modified status.
+  [fschulze]
 
 1.0 - 2009-05-02
 ----------------
